--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- CDN link oh the test -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.j"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
