modifing the code so the test 4 and five works

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <!-- CDN link to run the tests -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.j"></script>
+    <!--  CDN link to run the tests  -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <div id="root"></div>
     <!--
